Add light tracker

--- a/index.html
+++ b/index.html
@@ -116,5 +116,9 @@ window.onload = function() {
 
       </div>
     </div>
+
+    <script data-goatcounter="https://alexsci.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
+    
   </body>
 </html>
